removed margins added by bs row class to fix widht issue on small screens

--- a/public/css/card.css
+++ b/public/css/card.css
@@ -14,6 +14,11 @@ a {
     color: inherit;
 }
 
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 .button {
     background-color: rgba(255, 255, 255, 0.8);;
     border: solid;
@@ -188,6 +193,7 @@ a {
 /* View Notes Page */
 
 #card-contain {
+    width: 100%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
